--- a/DSSPenv.yml
+++ b/DSSPenv.yml
@@ -19,4 +19,7 @@ dependencies:
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - numpy
+  - python
+  - pip
+  - biopython
 prefix: /home/haiding/miniconda3/envs/DSSPenv
